--- a/src/assets/sass/pages/_homepage.scss
+++ b/src/assets/sass/pages/_homepage.scss
@@ -10,6 +10,7 @@
   background-position: bottom right;
   height: 105vh;
   background-attachment: scroll;
+  margin-bottom: 9.6rem;
 }
 
 .section-hero {
