--- a/src/assets/sass/pages/_queries.scss
+++ b/src/assets/sass/pages/_queries.scss
@@ -220,7 +220,7 @@
   }
 
   .heading-primary {
-    font-size: 3.2rem;
+    font-size: 3.4rem;
   }
 
   .grid--3-cols,
@@ -282,6 +282,12 @@
 /* BELOW 544px (Phones) */
 /***************************/
 @media (max-width: 34em) {
+  .hero-container,
+  .section-ingredients,
+  .section-doctors {
+    margin-bottom: 4.8rem;
+  }
+
   .grid {
     row-gap: 4.8rem;
   }
